--- a/.htaccess
+++ b/.htaccess
@@ -25,3 +25,7 @@ Require all denied
 
 SetEnv TZ Asia/Shanghai
 
+<IfModule mod_deflate.c>
+AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/json application/x-httpd-php application/x-javascript
+</IfModule>
+
